# fecapi

./: .gitignore  CMakeLists.txt  PotentialOptimizations.txt  README
apps/: ber_generator.grc  cc_bercurve.grc  testgui.grc  top_block.py  tpc_bercurve.grc  tpc_encode_and_decode.grc  tpc_encode_proberate.grc
cmake/Modules/: CMakeUninstall.cmake.in  FindGnuradioLdpc.cmake  FindVolk_FECAPI.cmake
cml_matlab/mat/: BtcDecode.m  BtcEncode.m  printCharArray.m  printFloatArray.m
cml_matlab/mat/acct/: webcml
cml_matlab/mat/alt/: #CapacityTableLookup.m#
cml_matlab/mat/exit/: FindBestBerCurves.m
cml_matlab/mat/parallel/cluster/: GetProjCf.m
cml_matlab/module/chan_code/ldpc/code_gen/tmp/: tmpfile.alist  tmpfile.pchk
cml_matlab/module/chan_code/ldpc/decoder/src/mexsrc/: InitState_mx.c  Iterate_mx.c  make.m
cml_matlab/module/chan_code/ldpc/decoder/src/mexsrc/lib/: ldpc-util.c
cml_matlab/oot_matlab/: genBerCurve_BTC.m  genBerCurve_BTC_parametricConfigurations.m  genBerCurve_BTC_parametricDecoderTypes.m  genBerCurve_BTC_parametricNumTurboIters.m  genTPCEncoderTestFiles.m  genTPCEncoderWithNoiseTestFiles.m  llrTest_parametricDecoderTypes.m  printf.m  testBTCDecode.m  testBTCDecode_llrCompute.m  testBTCEncode_and_Decode.m  testGREncodeDecode.m  testSisoDecode.m  turbo_data.mat
cml_matlab/source/: Capacity.c  CapacityTableLookup.c  ConvEncode.c  CreateCcsdsInterleaver.c  CreateSRandomInterleaver.c  CreateUmtsInterleaver.c  Deinterleave.c  Demod2D.c  DemodFSK.c  Depuncture.c  Interleave.c  Modulate.c  MpDecode.c  Puncture.c  RateDematch.c  RateMatch.c  SisoDecode.c  Somap.c  ViterbiDecode.c  make.m  octave-core
cml_matlab/source/include/: convolutional.h  maxstar.h  siso.h
grc/: CMakeLists.txt  bercurve_generate.py.xml  cc_encode_decode.grc  extended_decoder_interface.xml  extended_encoder_interface.xml  fec_decoder.xml  fec_decoder_async.xml  fec_deinterleave.xml  fec_encoder.xml  fec_encoder_async.xml  fec_interleave.xml  ldpc_decoder_def_list.xml  ldpc_encoder_def_list.xml  new_bercurve_generate.xml  qt_bercurve_sink.xml  top_block.py  tpc_decoder_def_list.xml  tpc_encoder_def_list.xml  variable_cc_decoder_def_list.xml  variable_cc_encoder_def_list.xml  wxgui_curvesink.xml
include/: CMakeLists.txt  ber_sink_b.h  cc_common.h  cc_decoder.h  cc_encoder.h  debug_macros.h  fec_api.h  fec_ber_bb.h  fec_corr_bb.h  fec_decoder.h  fec_decoder_async.h  fec_deinterleave.h  fec_encoder.h  fec_encoder_async.h  fec_gaussnoise_ff.h  fec_interleave.h  fec_puncture_ff.h  fec_random_gen_b.h  fec_reinflate_bb.h  ldpc_decoder.h  ldpc_encoder.h  libbertools.h  tpc_common.h  tpc_decoder.h  tpc_decoder_e07c.h  tpc_encoder.h
lib/: CMakeLists.txt  ber_sink_b_impl.cc  ber_sink_b_impl.h  cc_decoder.cc  cc_encoder.cc  fec_ber_bb.cc  fec_corr_bb.cc  fec_decoder.cc  fec_decoder_async.cc  fec_deinterleave.cc  fec_encoder.cc  fec_encoder_async.cc  fec_gaussnoise_ff.cc  fec_interleave.cc  fec_puncture_ff.cc  fec_random_gen_b.cc  fec_reinflate_bb.cc  ldpc_decoder.cc  ldpc_encoder.cc  libbertools.cc  tpc_common.cc  tpc_decoder.cc  tpc_decoder_e07c.cc  tpc_encoder.cc
python/: CMakeLists.txt  __init__.py  ber_generator.py  bercurve_generate.py  bitflip.py  capillary_threaded_decoder.py  capillary_threaded_encoder.py  curvesink.py  curvesink_nongl.py  extended_decoder_interface.py  extended_encoder_interface.py  fec_test.py  generalized_randomizer.py  new_bercurve_generate.py  qa_tpc_decoder.py  qa_tpc_decoder_withnoise.py  qa_tpc_encode_decode.py  qa_tpc_encoder.py  threaded_decoder.py  threaded_encoder.py
swig/: CMakeLists.txt  CMakeLists.txt~  ber_sink_b.i  cc_decoder.i  cc_encoder.i  fec_ber_bb.i  fec_corr_bb.i  fec_decoder.i  fec_deinterleave.i  fec_encoder.i  fec_gaussnoise_ff.i  fec_interleave.i  fec_puncture_ff.i  fec_random_gen_b.i  fec_reinflate_bb.i  fec_swig.i  fec_swig.i~  ldpc_decoder.i  ldpc_encoder.i  tpc_decoder.i  tpc_encoder.i
volk_fecapi/: CMakeLists.txt  CMakeLists.txt~  volk_fecapi.pc.in  volk_modtool.cfg
volk_fecapi/apps/: CMakeLists.txt  volk_fecapi_profile.cc
volk_fecapi/include/volk_fecapi/: volk_fecapi_common.h  volk_fecapi_prefs.h
volk_fecapi/kernels/: README.txt
volk_fecapi/kernels/volk_fecapi/: volk_fecapi_8u_x4_conv_k7_r2_f2048_8u.h
volk_fecapi/lib/: CMakeLists.txt  qa_16s_add_quad_aligned16.cc  qa_16s_branch_4_state_8_aligned16.cc  qa_16s_permute_and_scalar_add_aligned16.cc  qa_16s_quad_max_star_aligned16.cc  qa_32f_fm_detect_aligned16.cc  qa_32f_index_max_aligned16.cc  qa_32fc_index_max_aligned16.cc  qa_32fc_power_spectral_density_32f_aligned16.cc  qa_utils.cc  qa_utils.h  testqa.cc  volk_fecapi_prefs.c  volk_fecapi_rank_archs.c  volk_fecapi_rank_archs.h
volk_fecapi/orc/: volk_fecapi_16i_s32f_deinterleave_32f_x2_a_orc_impl.orc  volk_fecapi_16sc_magnitude_32f_aligned16_orc_impl.orc
volk_fecapi/tmpl/: volk_fecapi.tmpl.c  volk_fecapi.tmpl.h  volk_fecapi_cpu.tmpl.c  volk_fecapi_cpu.tmpl.h  volk_fecapi_machine_xxx.tmpl.c  volk_fecapi_machines.tmpl.c  volk_fecapi_machines.tmpl.h  volk_fecapi_typedefs.tmpl.h
